# just-laws

./: LAWS_PROGRESS.md  TODO.md  docs-llm-rag-plan.md  package.json
.github/workflows/: main.yml
deploy/: nginx.conf.example
docs/.vuepress/: client.js  config.js
docs/.vuepress/components/: LawChatWidget.vue
docs/category/: economic.md  social.md
rag-poc/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chunker.py  config.py  db.py  docker-compose.yml  embeddings.py  eval_retrieval.py  fly.toml  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt  reranker.py  retrieval.py
rag-poc/scripts/: build_index.sh  deploy.sh
