[project]
name = "just-laws-rag-poc"
version = "0.1.0"
description = "Just Laws — RAG legal Q&A (FastAPI + hybrid retrieval + rerank, pgvector/Chroma, local BGE-zh embeddings, OpenAI-compatible LLM)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-frontmatter>=1.1",
    "rank-bm25>=0.2.2",
    "jieba>=0.42",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "rag", "config", "embeddings", "chunker", "ingest", "db", "retrieval", "reranker"]
